--- a/src/app/features/user/pages/user-details/user-details.component.scss
+++ b/src/app/features/user/pages/user-details/user-details.component.scss
@@ -206,6 +206,17 @@
           color: $warning-500;
         }
       }
+
+      &.btn-danger {
+        background: transparent;
+        border: 1px solid $danger-100;
+        color: $danger-500;
+
+        &:hover:not(:disabled) {
+          background: $danger-500;
+          color: $white;
+        }
+      }
     }
   }
 }
