--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -73,7 +73,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: $space-4 $space-6;
+  padding: $space-4 $space-6 $space-5;
   border-top: 1px solid $color-border-default;
   gap: $space-3;
   flex-shrink: 0;
