--- a/src/app/features/member/components/member-list/member-list.component.html
+++ b/src/app/features/member/components/member-list/member-list.component.html
@@ -43,7 +43,8 @@
   </div>
 </div>
 
-<app-export-modal (close)="toggleExportModal()" *ngIf="isExportModalOpen"></app-export-modal>
+<app-export-modal (close)="toggleExportModal()" *ngIf="isExportModalOpen"
+                  [searchRequest]="searchParamsForExport$ | async"></app-export-modal>
 <app-send-message-modal
   *ngIf="isSendMessageModalOpen"
   [recipientNumbers]="recipientNumbers"
