--- a/src/app/features/notification/pages/campaigns-list/campaigns-list.component.html
+++ b/src/app/features/notification/pages/campaigns-list/campaigns-list.component.html
@@ -23,4 +23,4 @@
   </div>
 </div>
 
-<app-campaign-creation-wizard></app-campaign-creation-wizard>
+<app-campaign-creation-wizard (campaignCreated)="loadCampaigns()"></app-campaign-creation-wizard>
